risc0/zirgen/dsl/test/repro/missing_binop_lhs.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error:

component Top() {
  / Reg(1);
}

